관리자 페이지 필요 코드 추가 및 코드 정리 중